@@ -175,6 +175,9 @@
       <name>Chris Eldredge</name>
     </contributor>
     <contributor>
+      <name>Andy Lehane</name>
+    </contributor>
+    <contributor>
       <name>Marcelo Liberato</name>
     </contributor>
     <contributor>
